--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coderreact",
+  "name": "proyecto-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,14 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.7",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "sass": "^1.61.0",
+    "vite": "^4.1.0"
   }
 }
