--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@popperjs/core": "^2.11.7",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
